# herbivore

./: .gitignore  Cargo.toml  README.md  pyproject.toml
herbivore/: __init__.py  cli.py  constants.py  utils.py  websocket_client.py
src/: lib.rs  main.rs  websocket_client.rs
