[package]
name = "herbivore"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.26", features = ["derive"] }
env_logger = "0.11.6"
futures-util = "0.3.31"
log = "0.4.25"
reqwest = "0.12.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
uuid = { version = "1.12.0", features = ["v4"] }
