[tool.poetry]
name = "herbivore"
version = "0.1.0"
description = "Unofficial getgrass.io client"
authors = ["zippy1978"]

[tool.poetry.scripts]
herbivore = "herbivore.cli:cli"

[tool.poetry.dependencies]
python = "^3.10"
websockets = "^11.0.3"
fake-useragent = "^1.4.0"
loguru = "^0.7.2"
requests = "^2.31.0"
websockets-proxy = "^0.1.3"
aiohttp = "^3.11.11"
click = "^8.1.8"
colorama = "^0.4.6"
pyfiglet = "^1.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
